# rsbox

./: .dockerignore  .editorconfig  .gitignore  .keep-docs.txt  ADVANCED_FEATURES_RESEARCH.md  ALL_STAGES_COMPLETE.md  ALL_TASKS_COMPLETE_FINAL.md  ALL_TASKS_COMPLETE_FINAL_REPORT.md  ANDROID_SUPPORT_ADDED.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_ISSUES_REPORT.md  ARCHITECTURE_REFACTOR_COMPLETE.md  ARCHITECTURE_REFACTOR_FINAL.md  ARCHITECTURE_VERIFICATION.md  CHANGELOG.md  CI_BLOCKING_ISSUES_FIXED.md  CODE_FIXES_REPORT.md  CONNECTION_ISSUE_ACTIVE_PROBING.md  CONNECTION_TROUBLESHOOTING.md  CONTINUOUS_ENHANCEMENTS.md  CONTINUOUS_IMPROVEMENTS.md  CONTRIBUTING.md  CRITICAL_FIXES.md  CRITICAL_FIXES_BATCH2.md  Cargo.toml  Cross.toml  DEVELOPER_MODE.md  DNS_ADBLOCK_FEATURE_DESIGN.md  DNS_FEATURES_COMPLETE.md  Dockerfile  FEATURES.md  FEATURE_COMPARISON.md  FEATURE_TESTING_PLAN.md  FEATURE_TESTING_REPORT.md  FINAL_100_COMPLETION.md  FINAL_85_COMPLETION.md  FINAL_DELIVERY_REPORT.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_REPORT.md  (+54 more)
.cargo/: config.toml
.claude/plans/: architecture-refactor.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  (+6 more)
benches/: Cargo.toml  dns_resolver.rs  performance.rs  router_matching.rs
crates/rsb-api/: Cargo.toml  build.rs
crates/rsb-api/proto/: v2ray_stats.proto
crates/rsb-api/src/: lib.rs  metrics.rs  v2ray_grpc.rs
crates/rsb-core/: Cargo.toml
crates/rsb-core/src/: auto_reconnect.rs  auto_recovery.rs  bandwidth_estimator.rs  connection_manager.rs  connection_monitor.rs  connection_pool.rs  connection_warmer.rs  intelligent_health_check.rs  interface.rs  lib.rs  logging.rs  network_handover.rs  process.rs  proxy_stream.rs  qos.rs  quic_block.rs  rate_limit.rs  reload.rs  resumable_transfer.rs  rule_subscription.rs  runtime.rs  session_manager.rs  stats.rs  subscription.rs  system_proxy.rs  test_utils.rs  udp.rs  user_registry.rs
crates/rsb-core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/rsb-dns/: Cargo.toml
crates/rsb-dns/src/: adblock.rs  anti_pollution.rs  cache_optimizer.rs  dns_rules.rs  doh.rs  fake_ip.rs  fakeip.rs  lib.rs  resolved_registry.rs
crates/rsb-experimental/: Cargo.toml
crates/rsb-experimental/src/: lib.rs
crates/rsb-libbox/: Cargo.toml
crates/rsb-libbox/include/: rsbox.h
crates/rsb-libbox/src/: lib.rs
crates/rsb-protocol/: Cargo.toml  build.rs
crates/rsb-protocol/proto/: rsbox_api.proto
crates/rsb-protocol/src/: async_cleanup.rs  build.rs  build_context.rs  chain_outbound.rs  detour.rs  direct.rs  dns_inbound.rs  dns_outbound.rs  duration.rs  ech.rs  endpoints.rs  engine.rs  failover.rs  group.rs  http_outbound.rs  hysteria_outbound.rs  inbound_proxy.rs  legacy.rs  legacy_inbound.rs  lib.rs  load_balance.rs  original_dest.rs  original_dest_windows.rs  reality.rs  reality_cert.rs  reality_inbound.rs  reality_mirror.rs  reality_session.rs  reality_sidecar.rs  registry.rs  reload.rs  shadowsocks.rs  singbox_inbound_sidecar.rs  sniff.rs  socks.rs  ssh_client.rs  stub.rs  tailscale_control.rs  tailscale_embedded.rs  tailscale_noise.rs  (+18 more)
crates/rsb-protocol/src/anytls/: inbound.rs  mod.rs  outbound.rs  user_handler.rs
crates/rsb-protocol/src/hysteria2/: auth.rs  client.rs  mod.rs  obfs.rs  obfs_socket.rs  protocol.rs  relay.rs  server.rs  udp_client.rs
crates/rsb-protocol/src/rsq/: auth.rs  bandwidth.rs  brutal.rs  cert.rs  client.rs  control.rs  e2e.rs  mod.rs  obfs.rs  obfs_socket.rs  protocol.rs  quic.rs  relay.rs  server.rs  share.rs  stream.rs  traffic.rs  udp_client.rs  udp_demux.rs  udp_fragment.rs
crates/rsb-protocol/src/services/: api.rs  api_grpc.rs  clash_api.rs  context.rs  derp.rs  grpc_auth.rs  hysteria_realm.rs  listen.rs  mod.rs  multiplexer.rs  registry.rs  resolved.rs  ssm_api.rs  tls_util.rs  usbip.rs
crates/rsb-protocol/src/shadowtls/: client.rs  constants.rs  e2e.rs  handshake.rs  inbound.rs  mod.rs  outbound.rs  server.rs  v2.rs  v3.rs
crates/rsb-protocol/src/transport/: http2.rs  websocket.rs
crates/rsb-protocol/src/utls/: hello.rs  mod.rs  tls13.rs
crates/rsb-protocol/tests/: g5_panel.rs  smoke.rs
crates/rsb-route/: Cargo.toml
crates/rsb-route/src/: geo.rs  lib.rs  process_rule.rs  rule_cache.rs  rule_set.rs  smart_router.rs  source_rule.rs  srs.rs
crates/rsb-wireguard/: Cargo.toml
crates/rsb-wireguard/src/: lib.rs
docs/: ANDROID.md  BUILD_OPTIMIZATION.md  DOCKER.md  PERFORMANCE.md  QUICK_START.md  RELEASE.md
examples/: README.md  TEST-PROTOCOLS.md  config-advanced.json  config-anytls.json  config-reality.json  config-routing.json  config-server.json  config-shadowsocks.json  config-shadowtls-ss-v2.json  config-shadowtls-ss.json  config-tailscale-derp.json  config-test-shadowtls-ss-anytls.json  config-tun.json  rsq-client.json  rsq-local-client-bad-pass.json  rsq-local-client-user-a.json  rsq-local-client-user-b.json  rsq-local-client.json  rsq-local-server-multi.json  rsq-local-server.json  rsq-server.json  rsq-subscription-client.json  rsq-subscription-local.json  rsq-vps-brutal-test.json  test.env.example
rsbox/: Cargo.toml
rsbox/src/: main.rs
scripts/: apply-test-env.ps1  benchmark.sh  capture-reality-hello.py  capture-singbox-hello-len.py  debug-reality-handshake.py  debug-reality-local.py  decrypt-reality-flight.py  deploy-rsbox-to-g5.ps1  dump-reality-records.py  fix-rsq-production.sh  generate-service.sh  inspect-reality-records.py  local-build.py  probe-reality-vps.py  profile.sh  push-workflows.ps1  reality-fixture.json  reality-probe.py  rsq-test-common.ps1  send-rust-hello.py  setup-hy2-server.py  ssh-read-reality-config.py  ssh-server-diag.py  test-all-protocols.ps1  test-g5-panel.ps1  test-hello-on-server.py  test-protocol-config.ps1  test-protocols-on-host.ps1  test-reality-server.py  test-rsq-local.ps1  test-rsq-subscription-local.ps1  test-shadowtls.ps1  test-wireguard-admin.ps1  trace-reality-server.py  verify-fixes.sh  verify-reality-decrypt.py  verify-reality-keys.py  vps_cap_proxy.py
tests/: memory_usage.rs  protocol_interop.rs
(+140 files in other folders)
