[package]
name = "rsbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rsbox"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rsb-config.workspace = true
rsb-constant.workspace = true
rsb-api.workspace = true
rsb-protocol = { workspace = true, features = ["wireguard-tunnel"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
