[package]
name = "rsb-api"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
rsb-config.workspace = true
rsb-core.workspace = true
rsb-protocol = { path = "../rsb-protocol", default-features = false, features = ["quic"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tracing.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-build.workspace = true

[features]
default = ["desktop"]
desktop = ["rsb-protocol/desktop"]
