[package]
name = "rsb-dns"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
rsb-config.workspace = true
rustls.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
webpki-roots.workspace = true
