[package]
name = "rsb-libbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# cdylib: Android .so; staticlib: iOS .a; rlib: Rust integration tests
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
rsb-config.workspace = true
rsb-constant.workspace = true
rsb-core = { path = "../rsb-core" }
rsb-protocol = { path = "../rsb-protocol", default-features = false, features = ["quic"] }
rsb-api = { path = "../rsb-api", default-features = false }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
