[package]
name = "rsb-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
blake2.workspace = true
bytes.workspace = true
chacha20poly1305.workspace = true
dashmap.workspace = true
h3.workspace = true
h3-quinn.workspace = true
hkdf.workspace = true
hmac.workspace = true
http.workspace = true
http-body-util.workspace = true
parking_lot.workspace = true
prost.workspace = true
prost-types.workspace = true
quinn.workspace = true
rand.workspace = true
rsb-config.workspace = true
rsb-constant.workspace = true
rsb-core.workspace = true
rsb-dns.workspace = true
rsb-route.workspace = true
rsb-wireguard = { workspace = true, optional = true }
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
shadowsocks.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
tun.workspace = true
blake3.workspace = true
ipstack.workspace = true
libc.workspace = true
ssh2.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
axum = { workspace = true, features = ["ws"] }
axum-server.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
webpki-roots.workspace = true
x25519-dalek = { workspace = true }
rcgen.workspace = true

[build-dependencies]
protox = "0.7"
protoc-bin-vendored = "3"
tonic-build.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"] }

[features]
default = ["quic"]
quic = []
wireguard-tunnel = ["dep:rsb-wireguard"]
ssh-vendored = ["ssh2/vendored-openssl"]
