[package]
name = "rsb-route"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
regex.workspace = true
rsb-config.workspace = true
rsb-core.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
flate2 = { version = "1", features = ["zlib"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
