[package]
name = "rsb-wireguard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
boringtun = "0.6"
serde_json.workspace = true
tokio.workspace = true
tun.workspace = true
rsb-core.workspace = true
tracing.workspace = true
